Updated Structure and Schemas

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,4 @@
-DATABASE_URL=mongodb://localhost/subscribers
+NODE_END=development
+PORT=1337
+CORS_ORIGIN=http://localhost:8080
+DATABASE_URL=mongodb://localhost/gver
